# data_conversion

./: .gitignore  CMakeLists.txt  README.md
cmake/: ProjectCMakeTools.cmake
include/: bufferedfile.hpp  bufferedfilesystem.hpp  file.hpp  filesystem.hpp  flatfile.hpp  flatfilesystem.hpp  ifo.h  logconsole.h  safedelete.hpp  scopedpointer.hpp  stb.h  stbconverter.h  stl.h
src/: filesystem.cpp  ifo.cpp  logconsole.cpp  main.cpp  stb.cpp  stbconverter.cpp  stl.cpp
